RESOLVED FIXED187193
Video sometimes flickers when playing to AppleTV
https://bugs.webkit.org/show_bug.cgi?id=187193
Summary Video sometimes flickers when playing to AppleTV
Eric Carlson
Reported 2018-06-29 13:39:15 PDT
Video sometimes flickers when playing to AppleTV.
Attachments
Patch (8.00 KB, patch)
2018-06-29 13:55 PDT, Eric Carlson
jer.noble: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews101 for mac-sierra (2.32 MB, application/zip)
2018-06-29 15:04 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews114 for mac-sierra (3.16 MB, application/zip)
2018-06-29 15:20 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews106 for mac-sierra-wk2 (3.09 MB, application/zip)
2018-06-29 17:53 PDT, EWS Watchlist
no flags
Patch for landing (14.20 KB, patch)
2018-07-02 11:47 PDT, Eric Carlson
no flags
Fix broken test. (3.22 KB, patch)
2018-07-03 13:33 PDT, Eric Carlson
no flags
Fix the broken test (1.49 KB, patch)
2018-07-05 12:02 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2018-06-29 13:41:11 PDT
Eric Carlson
Comment 2 2018-06-29 13:55:50 PDT
Jer Noble
Comment 3 2018-06-29 14:16:29 PDT
Comment on attachment 343942 [details] Patch Nit: I'd rather see separate "scheduleUpdateSessionState()" and "updateSessionState()" methods than a single method with a default parameter.
EWS Watchlist
Comment 4 2018-06-29 15:03:59 PDT
Comment on attachment 343942 [details] Patch Attachment 343942 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/8387349 New failing tests: platform/mac/media/audio-session-category-audio-autoplay.html
EWS Watchlist
Comment 5 2018-06-29 15:04:00 PDT
Created attachment 343948 [details] Archive of layout-test-results from ews101 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6 2018-06-29 15:20:32 PDT
Comment on attachment 343942 [details] Patch Attachment 343942 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/8387320 New failing tests: platform/mac/media/audio-session-category-audio-autoplay.html http/tests/security/webaudio-render-remote-audio-blocked-no-crossorigin.html http/tests/security/webaudio-render-remote-audio-allowed-crossorigin.html
EWS Watchlist
Comment 7 2018-06-29 15:20:34 PDT
Created attachment 343953 [details] Archive of layout-test-results from ews114 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 8 2018-06-29 17:53:06 PDT
Comment on attachment 343942 [details] Patch Attachment 343942 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/8389699 New failing tests: platform/mac/media/audio-session-category-audio-autoplay.html
EWS Watchlist
Comment 9 2018-06-29 17:53:08 PDT
Created attachment 343987 [details] Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Eric Carlson
Comment 10 2018-07-02 11:47:58 PDT
Created attachment 344122 [details] Patch for landing
WebKit Commit Bot
Comment 11 2018-07-02 14:49:56 PDT
Comment on attachment 344122 [details] Patch for landing Clearing flags on attachment: 344122 Committed r233435: <https://trac.webkit.org/changeset/233435>
Dawei Fenton (:realdawei)
Comment 12 2018-07-03 11:02:19 PDT
(In reply to WebKit Commit Bot from comment #11) > Comment on attachment 344122 [details] > Patch for landing > > Clearing flags on attachment: 344122 > > Committed r233435: <https://trac.webkit.org/changeset/233435> Seeing crashes in iOS after this revision Sample Crash Log: https://build.webkit.org/builders/Apple%20iOS%2011%20Simulator%20Release%20WK2%20%28Tests%29/builds/5969/steps/run-api-tests/logs/stdio TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS 2018-07-03 10:12:34.215 TestWebKitAPI[54158:225799115] *** Warning: <AVPlayerViewController: 0x7f9ef1804200> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7f9ef1804200) exitFullScreenAnimated:completionHandler:]! -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7f9ef1804200) exitFullScreenAnimated:completionHandler:]! 2018-07-03 10:12:34.351 TestWebKitAPI[54158:225799115] *** Warning: <AVPlayerViewController: 0x7f9ef7815000> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7f9ef7815000) exitFullScreenAnimated:completionHandler:]! -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7f9ef7815000) exitFullScreenAnimated:completionHandler:]! 2018-07-03 10:12:34.527 TestWebKitAPI[54158:225799115] *** Warning: <AVPlayerViewController: 0x7f9ef7014000> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7f9ef7014000) exitFullScreenAnimated:completionHandler:]! -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7f9ef7014000) exitFullScreenAnimated:completionHandler:]! >>>> frameSizeChanged = 4096 >>>> frameSizeChanged = 4096 2018-07-03 10:12:34.713 TestWebKitAPI[54158:225799115] *** Warning: <AVPlayerViewController: 0x7f9ef7029600> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7f9ef7029600) exitFullScreenAnimated:completionHandler:]! -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7f9ef7029600) exitFullScreenAnimated:completionHandler:]! 2018-07-03 10:12:34.898 TestWebKitAPI[54158:225799115] *** Warning: <AVPlayerViewController: 0x7f9ef781d600> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7f9ef781d600) exitFullScreenAnimated:completionHandler:]! /Volumes/Data/slave/ios-simulator-11-release/build/Tools/TestWebKitAPI/Tests/WebKitLegacy/ios/AudioSessionCategoryIOS.mm:87 Value of: [[getAVAudioSessionClass() sharedInstance] category] Actual: "AVAudioSessionCategoryPlayback" Expected: getAVAudioSessionCategoryAmbient() Which is: "AVAudioSessionCategoryAmbient" /Volumes/Data/slave/ios-simulator-11-release/build/Tools/TestWebKitAPI/Tests/WebKitLegacy/ios/AudioSessionCategoryIOS.mm:95 Value of: [[getAVAudioSessionClass() sharedInstance] category] Actual: "AVAudioSessionCategoryPlayback" Expected: getAVAudioSessionCategoryAmbient() Which is: "AVAudioSessionCategoryAmbient" /Volumes/Data/slave/ios-simulator-11-release/build/Tools/TestWebKitAPI/Tests/WebKitLegacy/ios/AudioSessionCategoryIOS.mm:103 Value of: [[getAVAudioSessionClass() sharedInstance] category] Actual: "AVAudioSessionCategoryPlayback" Expected: getAVAudioSessionCategoryAmbient() Which is: "AVAudioSessionCategoryAmbient" /Volumes/Data/slave/ios-simulator-11-release/build/Tools/TestWebKitAPI/Tests/WebKitLegacy/ios/AudioSessionCategoryIOS.mm:111 Value of: [[getAVAudioSessionClass() sharedInstance] category] Actual: "AVAudioSessionCategoryPlayback" Expected: getAVAudioSessionCategoryAmbient() Which is: "AVAudioSessionCategoryAmbient"
Eric Carlson
Comment 13 2018-07-03 11:29:52 PDT
(In reply to David Fenton (:realdawei) from comment #12) > (In reply to WebKit Commit Bot from comment #11) > > Comment on attachment 344122 [details] > > Patch for landing > > > > Clearing flags on attachment: 344122 > > > > Committed r233435: <https://trac.webkit.org/changeset/233435> > > Seeing crashes in iOS after this revision > > Sample Crash Log: > https://build.webkit.org/builders/ > Apple%20iOS%2011%20Simulator%20Release%20WK2%20%28Tests%29/builds/5969/steps/ > run-api-tests/logs/stdio > This log shows that TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS is failing, but I don't see any indication of a crash. I will fix the failing test.
Dawei Fenton (:realdawei)
Comment 14 2018-07-03 11:32:32 PDT
(In reply to Eric Carlson from comment #13) > (In reply to David Fenton (:realdawei) from comment #12) > > (In reply to WebKit Commit Bot from comment #11) > > > Comment on attachment 344122 [details] > > > Patch for landing > > > > > > Clearing flags on attachment: 344122 > > > > > > Committed r233435: <https://trac.webkit.org/changeset/233435> > > > > Seeing crashes in iOS after this revision > > > > Sample Crash Log: > > https://build.webkit.org/builders/ > > Apple%20iOS%2011%20Simulator%20Release%20WK2%20%28Tests%29/builds/5969/steps/ > > run-api-tests/logs/stdio > > > This log shows that TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS is > failing, but I don't see any indication of a crash. > > I will fix the failing test. Thanks! sorry about that I mislabeled it as "crash"
Eric Carlson
Comment 15 2018-07-03 13:33:52 PDT
Created attachment 344208 [details] Fix broken test.
WebKit Commit Bot
Comment 16 2018-07-03 14:02:17 PDT
Comment on attachment 344208 [details] Fix broken test. Clearing flags on attachment: 344208 Committed r233478: <https://trac.webkit.org/changeset/233478>
Dawei Fenton (:realdawei)
Comment 17 2018-07-03 17:00:51 PDT
(In reply to WebKit Commit Bot from comment #16) > Comment on attachment 344208 [details] > Fix broken test. > > Clearing flags on attachment: 344208 > > Committed r233478: <https://trac.webkit.org/changeset/233478> still failing after this revision: https://build.webkit.org/builders/Apple%20iOS%2011%20Simulator%20Release%20WK2%20%28Tests%29/builds/5980/steps/run-api-tests/logs/stdio Failed TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS 2018-07-03 15:32:45.284 TestWebKitAPI[48251:227456308] *** Warning: <AVPlayerViewController: 0x7ffbe480f600> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7ffbe480f600) exitFullScreenAnimated:completionHandler:]! -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7ffbe480f600) exitFullScreenAnimated:completionHandler:]! 2018-07-03 15:32:45.416 TestWebKitAPI[48251:227456308] *** Warning: <AVPlayerViewController: 0x7ffbe880a200> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7ffbe880a200) exitFullScreenAnimated:completionHandler:]! -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7ffbe880a200) exitFullScreenAnimated:completionHandler:]! 2018-07-03 15:32:55.766 TestWebKitAPI[48251:227456308] *** Warning: <AVPlayerViewController: 0x7ffbe880ba00> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7ffbe880ba00) exitFullScreenAnimated:completionHandler:]! -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7ffbe880ba00) exitFullScreenAnimated:completionHandler:]! >>>> frameSizeChanged = 4096 >>>> frameSizeChanged = 4096 2018-07-03 15:33:06.064 TestWebKitAPI[48251:227456308] *** Warning: <AVPlayerViewController: 0x7ffbe8819800> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7ffbe8819800) exitFullScreenAnimated:completionHandler:]! -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7ffbe8819800) exitFullScreenAnimated:completionHandler:]! 2018-07-03 15:33:06.377 TestWebKitAPI[48251:227456308] *** Warning: <AVPlayerViewController: 0x7ffbe3826e00> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7ffbe3826e00) exitFullScreenAnimated:completionHandler:]! /Volumes/Data/slave/ios-simulator-11-release/build/Tools/TestWebKitAPI/Tests/WebKitLegacy/ios/AudioSessionCategoryIOS.mm:99 Value of: [[getAVAudioSessionClass() sharedInstance] category] Actual: "AVAudioSessionCategoryPlayback" Expected: getAVAudioSessionCategoryAmbient() Which is: "AVAudioSessionCategoryAmbient" /Volumes/Data/slave/ios-simulator-11-release/build/Tools/TestWebKitAPI/Tests/WebKitLegacy/ios/AudioSessionCategoryIOS.mm:108 Value of: [[getAVAudioSessionClass() sharedInstance] category] Actual: "AVAudioSessionCategoryPlayback" Expected: getAVAudioSessionCategoryAmbient() Which is: "AVAudioSessionCategoryAmbient"
Eric Carlson
Comment 18 2018-07-05 12:02:20 PDT
Created attachment 344348 [details] Fix the broken test
WebKit Commit Bot
Comment 19 2018-07-05 12:42:35 PDT
Comment on attachment 344348 [details] Fix the broken test Clearing flags on attachment: 344348 Committed r233535: <https://trac.webkit.org/changeset/233535>
Note You need to log in before you can comment on or make changes to this bug.