Source/WebCore/platform/audio/PlatformMediaSession.cpp
@@ -189,6 +189,8 @@ bool PlatformMediaSession::clientWillBeginPlayback()
     if (m_notifyingClient)
         return true;
 
+    INFO_LOG(LOGIDENTIFIER, "state = ", m_state);
+
     if (!PlatformMediaSessionManager::sharedManager().sessionWillBeginPlayback(*this)) {
         if (state() == Interrupted)
             m_stateToRestore = Playing;
