Source/WebCore/platform/audio/cocoa/MediaSessionManagerCocoa.cpp
@@ -37,10 +37,11 @@ using namespace WebCore;
 
 static const size_t kWebAudioBufferSize = 128;
 static const size_t kLowPowerVideoBufferSize = 4096;
+static const Seconds updateSessionStateDelay { 100_ms };
 
-void PlatformMediaSessionManager::updateSessionState()
+void PlatformMediaSessionManager::scheduleUpdateSessionState()
 {
-    LOG(Media, "PlatformMediaSessionManager::updateSessionState() - types: Video(%d), Audio(%d), WebAudio(%d)", count(PlatformMediaSession::Video), count(PlatformMediaSession::Audio), count(PlatformMediaSession::WebAudio));
+    LOG(Media, "PlatformMediaSessionManager::scheduleUpdateSessionState() - types: Video(%d), Audio(%d), WebAudio(%d)", count(PlatformMediaSession::Video), count(PlatformMediaSession::Audio), count(PlatformMediaSession::WebAudio));
 
     if (has(PlatformMediaSession::WebAudio))
         AudioSession::sharedSession().setPreferredBufferSize(kWebAudioBufferSize);
@@ -64,25 +65,34 @@ void PlatformMediaSessionManager::updateSessionState()
     if (!DeprecatedGlobalSettings::shouldManageAudioSessionCategory())
         return;
 
-    bool hasWebAudioType = false;
-    bool hasAudibleAudioOrVideoMediaType = false;
-    bool hasAudioCapture = anyOfSessions([&hasWebAudioType, &hasAudibleAudioOrVideoMediaType] (PlatformMediaSession& session, size_t) mutable {
-        auto type = session.mediaType();
-        if (type == PlatformMediaSession::WebAudio)
-            hasWebAudioType = true;
-        if ((type == PlatformMediaSession::VideoAudio || type == PlatformMediaSession::Audio) && session.canProduceAudio() && session.state() == PlatformMediaSession::Playing)
-            hasAudibleAudioOrVideoMediaType = true;
-        return (type == PlatformMediaSession::MediaStreamCapturingAudio);
-    });
+    if (!m_updateStateTimer) {
+        auto updateSessionState = [this] () mutable {
 
-    if (hasAudioCapture)
-        AudioSession::sharedSession().setCategory(AudioSession::PlayAndRecord);
-    else if (hasAudibleAudioOrVideoMediaType)
-        AudioSession::sharedSession().setCategory(AudioSession::MediaPlayback);
-    else if (hasWebAudioType)
-        AudioSession::sharedSession().setCategory(AudioSession::AmbientSound);
-    else
-        AudioSession::sharedSession().setCategory(AudioSession::None);
+            bool hasWebAudioType = false;
+            bool hasAudibleAudioOrVideoMediaType = false;
+            bool hasAudioCapture = anyOfSessions([&hasWebAudioType, &hasAudibleAudioOrVideoMediaType] (PlatformMediaSession& session, size_t) mutable {
+                auto type = session.mediaType();
+                if (type == PlatformMediaSession::WebAudio)
+                    hasWebAudioType = true;
+                if ((type == PlatformMediaSession::VideoAudio || type == PlatformMediaSession::Audio) && session.canProduceAudio() && session.state() == PlatformMediaSession::Playing)
+                    hasAudibleAudioOrVideoMediaType = true;
+                return (type == PlatformMediaSession::MediaStreamCapturingAudio);
+            });
+
+            if (hasAudioCapture)
+                AudioSession::sharedSession().setCategory(AudioSession::PlayAndRecord);
+            else if (hasAudibleAudioOrVideoMediaType)
+                AudioSession::sharedSession().setCategory(AudioSession::MediaPlayback);
+            else if (hasWebAudioType)
+                AudioSession::sharedSession().setCategory(AudioSession::AmbientSound);
+            else
+                AudioSession::sharedSession().setCategory(AudioSession::None);
+        };
+
+        m_updateStateTimer = std::make_unique<DeferrableOneShotTimer>(WTFMove(updateSessionState), updateSessionStateDelay);
+    }
+
+    m_updateStateTimer->restart();
 }
 
 #endif // USE(AUDIO_SESSION)
